// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lozenge appearance property should render correctly with text truncated 1`] = `
.c0 {
  background-color: #EAE6FF;
  color: #403294;
  border-radius: 3px;
  box-sizing: border-box;
  display: inline-block;
  font-size: 11px;
  font-weight: 700;
  line-height: 1;
  max-width: 100%;
  padding: 2px 0 3px 0;
  text-transform: uppercase;
  vertical-align: baseline;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 4px;
  max-width: 200px;
  width: 100%;
}

<span
  className="c0"
>
  <span
    className="c1"
  >
    Hello, I should truncate at a point.
  </span>
</span>
`;

exports[`Lozenge maxWidth property should render correctly with number maxWidth 1`] = `
.c0 {
  background-color: #DFE1E6;
  color: #42526E;
  border-radius: 3px;
  box-sizing: border-box;
  display: inline-block;
  font-size: 11px;
  font-weight: 700;
  line-height: 1;
  max-width: 100%;
  padding: 2px 0 3px 0;
  text-transform: uppercase;
  vertical-align: baseline;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 4px;
  max-width: 120px;
  width: 100%;
}

<span
  className="c0"
>
  <span
    className="c1"
  >
    Hello
  </span>
</span>
`;

exports[`Lozenge maxWidth property should render correctly with string maxWidth 1`] = `
.c0 {
  background-color: #DFE1E6;
  color: #42526E;
  border-radius: 3px;
  box-sizing: border-box;
  display: inline-block;
  font-size: 11px;
  font-weight: 700;
  line-height: 1;
  max-width: 100%;
  padding: 2px 0 3px 0;
  text-transform: uppercase;
  vertical-align: baseline;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 4px;
  max-width: 100%;
  width: 100%;
}

<span
  className="c0"
>
  <span
    className="c1"
  >
    Hello
  </span>
</span>
`;
